Fixed dark mode styling for disabled inputs Removed console prints Adjusted phrasing in short rest message

--- a/src/styles/Global.scss
+++ b/src/styles/Global.scss
@@ -11,6 +11,7 @@
    --color-text-dark-header: rgba(255, 255, 255, 0.83);
    --color-text-dark-inactive: rgba(255, 255, 255, 0.83);
    --color-border-highlight: rgba(255, 255, 255, 0.83);
+   --static-value-background: rgb(70, 70, 70);
 
    .content-link {
       --color-text-dark-primary: #191813;
